--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -8,6 +8,9 @@ image: '/images/80.jpg'
   {% if site.contact.description %}
   <p class="contact-description">{{site.contact.description}}</p>
   {% endif %}
+  If you have any questions or suggestions, contact me via <a href="https://instagram.com/lucasgatsas" target="_blank">Instagram</a>. 
+  Any questions about the licensing of my pictures and videos? please get in contact with me. Thank You!
+  <!-- 
   <form class="form"
     action="{% if site.contact.email %}https://formspree.io/{{site.contact.email}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
@@ -26,7 +29,7 @@ image: '/images/80.jpg'
       <button class="button button--primary" type="submit">Send Message</button>
     </div>
     <input type="hidden" name="_next" value="{{ site.baseurl }}/contact/thanks/" />
-  </form>
+  </form>-->
 </div>
 
 
