--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -8,7 +8,7 @@ image: '/images/80.jpg'
   {% if site.contact.description %}
   <p class="contact-description">{{site.contact.description}}</p>
   {% endif %}
-  If you have any questions or suggestions, contact me via <a href="https://instagram.com/lucasgatsas" target="_blank">Instagram</a>. 
+  Suggestions, contact me via <a href="https://instagram.com/lucasgatsas" target="_blank">Instagram</a>. 
   Any questions about the licensing of my pictures and videos? please get in contact with me. Thank You!
   <!-- 
   <form class="form"
