--- a/index.html
+++ b/index.html
@@ -2,7 +2,29 @@
 layout: default
 ---
 {% include hero.html %}
-
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Lucas Gatsas",
+    "url": "https://lucasgatsas.com",
+    "image": "{{ site.url }}/images/lucas-gatsas-feed-big-2.jpg",
+    "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
+    "sameAs": [
+      "https://www.instagram.com/lucasgatsas/",
+      "https://youtube.com/@lucasgatsasastro",
+      "https://x.com/lucasgatsas",
+      "https://www.threads.net/@lucasgatsas",
+      "https://vsco.co/lucasgatsas/gallery"
+    ],
+    "jobTitle": "Astro und Solar Photographer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Swiss Solar Observatory Society",
+      "url": "https://lucasgatsas.com"
+    }
+  }
+</script>
 <div class="container">
   <div class="row">
     <div class="col col-12">
