--- a/index.html
+++ b/index.html
@@ -26,6 +26,35 @@ layout: default
   }
 
 </script>
+
+<script type="application/ld+json">
+  [{
+    "@context": "https://schema.org/",
+    "@type": "ImageObject",
+    "contentUrl": "https://example.com/photos/1x1/black-labrador-puppy.jpg",
+    "license": "https://example.com/license",
+    "acquireLicensePage": "https://example.com/how-to-use-my-images",
+    "creditText": "Labrador PhotoLab",
+    "creator": {
+      "@type": "Person",
+      "name": "Brixton Brownstone"
+     },
+    "copyrightNotice": "Clara Kent"
+  },
+ {
+    "@context": "https://schema.org/",
+    "@type": "ImageObject",
+    "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
+    "license": "https://example.com/license",
+    "acquireLicensePage": "https://example.com/how-to-use-my-images",
+    "creditText": "Labrador PhotoLab",
+    "creator": {
+      "@type": "Person",
+      "name": "Brixton Brownstone"
+     },
+    "copyrightNotice": "Clara Kent"
+  }]
+  </script>
 <div class="container">
   <div class="row">
     <div class="col col-12">
