--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
       "@type": "Person",
       "name": "Brixton Brownstone"
      },
-    "copyrightNotice": "Clara Kent"
+    "copyrightNotice": "Lucas Gatsas"
   }]
   </script>
 <div class="container">
