--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
       "@type": "Person",
       "name": "Brixton Brownstone"
      },
-    "copyrightNotice": "Clara Kent"
+    "copyrightNotice": "Lucas Gatsas"
   },
   {
     "@context": "https://schema.org/",
