--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
   [{
     "@context": "https://schema.org/",
     "@type": "ImageObject",
-    "contentUrl": "https://example.com/photos/1x1/black-labrador-puppy.jpg",
+    "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_18.jpg",
     "license": "https://example.com/license",
     "acquireLicensePage": "https://example.com/how-to-use-my-images",
     "creditText": "Labrador PhotoLab",
