--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ layout: default
     "@context": "https://schema.org/",
     "@type": "ImageObject",
     "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
-    "license": "https://example.com/license",
-    "acquireLicensePage": "https://example.com/how-to-use-my-images",
+    "license": "https://lucasgatsas.xyz/about",
+    "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Labrador PhotoLab",
     "creator": {
       "@type": "Person",
