--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: default
     "creditText": "Lucas Gatsas",
     "creator": {
       "@type": "Person",
-      "name": "Brixton Brownstone"
+      "name": "Total Solar Eclipse April 8, 2024 in Dallas, Texas USA"
      },
     "copyrightNotice": "Clara Kent"
   },
@@ -108,8 +108,8 @@ layout: default
     "@context": "https://schema.org/",
     "@type": "ImageObject",
     "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
-    "license": "https://example.com/license",
-    "acquireLicensePage": "https://example.com/how-to-use-my-images",
+    "license": "https://lucasgatsas.xyz/about",
+    "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Labrador PhotoLab",
     "creator": {
       "@type": "Person",
