--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ layout: default
  {
     "@context": "https://schema.org/",
     "@type": "ImageObject",
-    "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
+    "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_16.jpg",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Labrador PhotoLab",
@@ -107,7 +107,7 @@ layout: default
   {
     "@context": "https://schema.org/",
     "@type": "ImageObject",
-    "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
+    "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_10.jpg",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Labrador PhotoLab",
@@ -120,7 +120,7 @@ layout: default
   {
     "@context": "https://schema.org/",
     "@type": "ImageObject",
-    "contentUrl": "https://example.com/photos/1x1/adult-black-labrador.jpg",
+    "contentUrl": "https://lucasgatsas.com/images/lucas-gatsas-total-solar-eclipse-moon.jpg",
     "license": "https://example.com/license",
     "acquireLicensePage": "https://example.com/how-to-use-my-images",
     "creditText": "Labrador PhotoLab",
