--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ layout: default
     "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_18.jpg",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
-    "creditText": "Lucas Gatsas",
+    "creditText": "Total Solar Eclipse April 8, 2024 in Dallas, Texas USA",
     "creator": {
       "@type": "Person",
-      "name": "Total Solar Eclipse April 8, 2024 in Dallas, Texas USA"
+      "name": "Lucas Gatsas"
      },
     "copyrightNotice": "Clara Kent"
   },
@@ -100,7 +100,7 @@ layout: default
     "creditText": "Labrador PhotoLab",
     "creator": {
       "@type": "Person",
-      "name": "Brixton Brownstone"
+      "name": "Lucas Gatsas"
      },
     "copyrightNotice": "Lucas Gatsas"
   },
@@ -113,7 +113,7 @@ layout: default
     "creditText": "Labrador PhotoLab",
     "creator": {
       "@type": "Person",
-      "name": "Brixton Brownstone"
+      "name": "Lucas Gatsas"
      },
     "copyrightNotice": "Lucas Gatsas"
   },
@@ -126,7 +126,7 @@ layout: default
     "creditText": "Labrador PhotoLab",
     "creator": {
       "@type": "Person",
-      "name": "Brixton Brownstone"
+      "name": "Lucas Gatsas"
      },
     "copyrightNotice": "Lucas Gatsas"
   }]
