--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
       "@type": "Person",
       "name": "Lucas Gatsas"
      },
-    "copyrightNotice": "Clara Kent"
+    "copyrightNotice": "Lucas Gatsas"
   },
  {
     "@context": "https://schema.org/",
@@ -97,7 +97,7 @@ layout: default
     "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_16.jpg",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
-    "creditText": "Labrador PhotoLab",
+    "creditText": "Lucas Gatsas",
     "creator": {
       "@type": "Person",
       "name": "Lucas Gatsas"
@@ -110,7 +110,7 @@ layout: default
     "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_10.jpg",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
-    "creditText": "Labrador PhotoLab",
+    "creditText": "Lucas Gatsas",
     "creator": {
       "@type": "Person",
       "name": "Lucas Gatsas"
@@ -123,7 +123,7 @@ layout: default
     "contentUrl": "https://lucasgatsas.com/images/lucas-gatsas-total-solar-eclipse-moon.jpg",
     "license": "https://example.com/license",
     "acquireLicensePage": "https://example.com/how-to-use-my-images",
-    "creditText": "Labrador PhotoLab",
+    "creditText": "Lucas Gatsas",
     "creator": {
       "@type": "Person",
       "name": "Lucas Gatsas"
