--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ layout: default
     "@context": "https://schema.org/",
     "@type": "ImageObject",
     "contentUrl": "https://lucasgatsas.com/images/lucas-gatsas-total-solar-eclipse-moon.jpg",
-    "license": "https://example.com/license",
-    "acquireLicensePage": "https://example.com/how-to-use-my-images",
+    "license": "https://lucasgatsas.xyz/abou",
+    "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Lucas Gatsas",
     "creator": {
       "@type": "Person",
