--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ layout: default
       "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_16.jpg",
       "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_10.jpg",
       "https://lucasgatsas.com/images/lucas-gatsas-total-solar-eclipse-moon.jpg",
-      "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_13.jpg"
+      "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_13.jpg",
+      "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_01.jpg"
     ],
     "author": {
       "@type": "Person",
@@ -135,6 +136,19 @@ layout: default
     "@context": "https://schema.org/",
     "@type": "ImageObject",
     "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_13.jpg",
+    "license": "https://lucasgatsas.xyz/abou",
+    "acquireLicensePage": "https://lucasgatsas.xyz/about",
+    "creditText": "Lucas Gatsas",
+    "creator": {
+      "@type": "Person",
+      "name": "Lucas Gatsas"
+     },
+    "copyrightNotice": "Lucas Gatsas"
+  },
+  {
+    "@context": "https://schema.org/",
+    "@type": "ImageObject",
+    "contentUrl": "https://lucasgatsas.com/images/lucas_gatsas_tse_april8_2024_01.jpg",
     "license": "https://lucasgatsas.xyz/abou",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Lucas Gatsas",
